--- a/index.html
+++ b/index.html
@@ -2,36 +2,57 @@
 <html>
   <head>
     <title>chatme</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="" id="form">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>    <script>
-      $(function () {
-      var socket = io()
-      $('form').submit(function(e){
-        e.preventDefault() // prevents page reloading
-        socket.emit('chat message', $('#m').val())
-        $('#m').val('')
-        return false
+    <script src="/hypersimple-source.js"></script>
+    <script>
+      const socket = io()
+      const { comp, escape, html, render, update } = hypersimple
+      document.addEventListener('DOMContentLoaded', () => {
+        socket.on('chat message', function(message) {
+          window.messages = model.messages
+          const messages = model.messages
+          messages.push({ message })
+          update(model, {
+            messages
+          })
+        })
+
+        const Message = comp(model => html`
+            <li>${model.message}</li>
+          `
+        )
+
+        const Messages = comp(model => html`
+              ${model.map(value => `<li>${escape(value.message)}</li>`)}
+            `
+        )
+
+        const model = {
+          label: 'type here to send a message',
+          onsubmit(event) {
+            console.log('submitted', event)
+            event.preventDefault()
+            socket.emit('chat message', document.getElementById('messageInput').value)
+            document.getElementById('messageInput').value = ''
+          },
+          messages: [{ message: 'message 1' }, { message: 'message 2' }]
+        }
+        const App = comp(model => html`
+            <ul id="messages">
+              ${Messages(model.messages)}
+            </ul>
+            <form action="" id="form" onsubmit=${() => model.onsubmit(event)}>
+              <input id="messageInput" autocomplete="off" placeholder=${model.label}/><button>
+                Send
+              </button>
+            </form>
+          `
+        )
+        render(document.body, () => App(model))
       })
-      socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg))
-      })
-    })
     </script>
   </body>
 </html>
