styling. add paper-plane svg icon component

--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>chatme</h1>
     <script src="app/index.js"></script>
     <div id="app"></div>
+    <!-- attribution must go on the about/description page -->
+    <!-- <div>
+      Icons made by
+      <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
+        >Freepik</a
+      >
+      from
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      is licensed by
+      <a
+        href="http://creativecommons.org/licenses/by/3.0/"
+        title="Creative Commons BY 3.0"
+        target="_blank"
+        >CC 3.0 BY</a
+      >
+    </div> -->
   </body>
 </html>
