--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
     <title>chatme</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="app/css/normalize.css" />
+    <link rel="stylesheet" href="app/css/styles.css" />
   </head>
   <body>
-    <h1>chatme</h1>
     <script src="app/index.js"></script>
     <div id="app"></div>
     <!-- attribution must go on the about/description page -->
